--- a/Index.css
+++ b/Index.css
@@ -13,6 +13,14 @@ body {
   overflow-x: hidden;
 }
 
+.crucifijo {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-width: 40px; /* Ajusta este valor según el tamaño deseado */
+  max-height: 40px; /* Ajusta este valor según el tamaño deseado */
+}
+
 /* Fuente Poiret One */
 .poiret-one-regular {
   font-family: "Poiret One", serif;
